--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
   "dependencies": {
     "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "^7.17.0",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "aws-sdk": "^2.1287.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-styled-components": "^2.0.7",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.3",
+    "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.2",
     "flat": "^5.0.2",
+    "framer-motion": "^8.5.2",
     "http-status": "^1.5.2",
     "i18n": "^0.15.1",
     "i18next": "^22.4.9",
@@ -35,6 +40,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "migrate": "^1.8.0",
+    "millify": "^5.0.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.3.2",
     "next": "12.1.6",
@@ -43,6 +49,7 @@
     "next-plugin-custom-babel-config": "^1.0.5",
     "next-redux-wrapper": "^7.0.5",
     "node-fetch": "^3.3.0",
+    "nw-react-slider": "^2.0.1",
     "openai": "^3.1.0",
     "path": "^0.12.7",
     "prettier": "^2.7.1",
