--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.3",
+    "cheerio": "^1.0.0-rc.12",
     "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
     "esm": "^3.2.25",
@@ -61,6 +62,7 @@
     "react-inlinesvg": "^3.0.1",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.1",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "react-type-animation": "^2.1.2",
     "recompose": "^0.30.0",
