--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.17.2",
     "flat": "^5.0.2",
     "framer-motion": "^8.5.2",
+    "fuzzy-search": "^3.2.1",
     "http-status": "^1.5.2",
     "i18n": "^0.15.1",
     "i18next": "^22.4.9",
@@ -60,11 +61,8 @@
     "react-dom": "18.1.0",
     "react-i18next": "^12.1.4",
     "react-inlinesvg": "^3.0.1",
-    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.1",
-    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
-    "react-type-animation": "^2.1.2",
     "recompose": "^0.30.0",
     "redux": "^4.2.0",
     "redux-devtools": "^3.7.0",
@@ -73,6 +71,7 @@
     "redux-thunk": "^2.4.1",
     "s3rver": "^3.7.1",
     "sass": "^1.57.1",
+    "stripe": "^11.8.0",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0"
   },
